tests/vertical-slice/reject/mir_gap_cross_module_iter/main.hew
// Ratchet for cross-module generic-impl-method monomorphisation.
//
// Calling the `std::iter` free-function combinators from an importing module
// must fail closed — loudly — until the remaining cross-module lowering gap is
// closed. The namespaced `iter::map` / `iter::count` calls resolve and the
// closure argument is captured, but the imported generic adapter type's
// impl-method (`Map::next`) monomorphisation references an origin that is not
// emitted into the consumer module, so the chain fails closed at MIR lowering
// with `MIR lowering for function call is not implemented yet`.
//
// When the gap closes this fixture flips to an accept (the chain runs and
// returns the mapped count) — see `iter_xmod_map_count` in run.sh.
import std::iter;

type Countdown {
    n: i64;
}

impl Iterator for Countdown {
    type Item = i64;
    fn next(var self) -> Option<i64> {
        if self.n <= 0 {
            None
        } else {
            let cur = self.n;
            self.n = self.n - 1;
            Some(cur)
        }
    }
}

pub fn main() -> i64 {
    let m = iter::map(Countdown { n: 3 }, |x: i64| x * 2);
    iter::count(m)
}
